plugins {
	id 'java'
	id 'org.springframework.boot' version '4.1.0'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'gg.jte.gradle' version '3.2.4'
	id 'com.github.node-gradle.node' version '7.1.0'
}

group = 'org.huebert'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

repositories {
	mavenCentral()
}

ext {
	set('springAiVersion', "2.0.0")
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-restclient'
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'org.springframework.boot:spring-boot-starter-aspectj'
	implementation 'gg.jte:jte-spring-boot-starter-4:3.2.4'
    implementation("com.google.guava:guava:33.6.0-jre")
	implementation 'org.springframework.ai:spring-ai-starter-model-openai'
	compileOnly 'org.projectlombok:lombok'
	runtimeOnly 'org.xerial:sqlite-jdbc'
	runtimeOnly 'org.hibernate.orm:hibernate-community-dialects'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-actuator-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-data-jpa-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-restclient-test'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.ai:spring-ai-bom:${springAiVersion}"
	}
}

jte {
	generate()
	binaryStaticContent = true
}

// ── Frontend ──

node {
	download = true
	version = "22.20.0"
	workDir = file("${rootProject.projectDir}/.gradle/nodejs")
	npmWorkDir = file("${rootProject.projectDir}/.gradle/npm")
	nodeProjectDir = file("${rootProject.projectDir}/frontend")
}

tasks.register("npmCi", com.github.gradle.node.npm.task.NpmTask) {
	args.set(["ci"])
	dependsOn(tasks.named("nodeSetup"))
}

tasks.register("npmBuild", com.github.gradle.node.npm.task.NpmTask) {
	args.set(["run", "build"])
	dependsOn(tasks.named("npmCi"))
}

tasks.register("npmTest", com.github.gradle.node.npm.task.NpmTask) {
	args.set(["run", "test:run"])
	dependsOn(tasks.named("npmCi"))
}

tasks.register("copyFrontend", Copy) {
	dependsOn(tasks.named("npmBuild"))
	from("${rootProject.projectDir}/frontend/dist")
	into("${rootProject.layout.buildDirectory.get().asFile}/frontend-resources/static")
}

tasks.named("bootJar") {
	archiveFileName = "ncbot.jar"
	dependsOn(tasks.named("copyFrontend"))
}

tasks.named("processResources") {
	dependsOn(tasks.named("copyFrontend"))
}

sourceSets {
	main {
		resources {
			srcDir("${rootProject.layout.buildDirectory.get().asFile}/frontend-resources")
		}
	}
}

// Backend tests do not require Node/frontend
tasks.named('test') {
	useJUnitPlatform()
}
